WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238536
Unreviewed, non-unified build fixes
https://bugs.webkit.org/show_bug.cgi?id=238536
Summary
Unreviewed, non-unified build fixes
Lauro Moura
Reported
2022-03-29 22:16:02 PDT
Unreviewed, non-unified build fixes
Attachments
Patch
(4.40 KB, patch)
2022-03-29 22:16 PDT
,
Lauro Moura
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Lauro Moura
Comment 1
2022-03-29 22:16:43 PDT
Created
attachment 456092
[details]
Patch
EWS
Comment 2
2022-03-30 01:21:02 PDT
Committed
r292100
(
249020@main
): <
https://commits.webkit.org/249020@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 456092
[details]
.
Radar WebKit Bug Importer
Comment 3
2022-03-30 01:22:18 PDT
<
rdar://problem/91031468
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug